<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FingerprintCompat</string>

    <string name="item_title">White Mesh Pluto Backpack</string>
    <string name="item_price">$62.68</string>
    <string name="item_description">Mesh backpack in white. Black textile trim throughout.</string>

    <string name="purchase">Purchase</string>
    <string name="purchase_not_invalidated">Purchase not invalidated</string>
    <string name="purchase_button_not_invalidated_description">
        You can proceed to purchase with this button \n even if a new fingerprint is enrolled
    </string>

    <string name="fingerprint_description">Confirm fingerprint to continue</string>
    <string name="fingerprint_hint">Touch sensor</string>

    <string name="sign_in">Sign in</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="fingerprint_success">Fingerprint recognized</string>
    <string name="fingerprint_not_recognized">Fingerprint not recognized. Try again</string>
</resources>
