<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="24dp"
        android:paddingTop="16dp"
        android:paddingEnd="24dp"
        android:paddingBottom="24dp">

        <TextView
            android:id="@+id/tv_fingerprint_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/fingerprint_description"
            android:textAppearance="@android:style/TextAppearance.Material.Subhead"
            android:textColor="?android:attr/textColorSecondary" />


        <ImageView
            android:id="@+id/iv_fingerprint_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_fingerprint_description"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_fingerprint" />

        <TextView
            android:id="@+id/tv_fingerprint_status"
            style="@android:style/TextAppearance.Material.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/iv_fingerprint_icon"
            android:layout_alignBottom="@+id/iv_fingerprint_icon"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@+id/iv_fingerprint_icon"
            android:gravity="center_vertical"
            android:text="@string/fingerprint_hint"
            android:textColor="@color/color_hint" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/buttonPanel"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:paddingStart="12dp"
        android:paddingTop="4dp"
        android:paddingEnd="12dp"
        android:paddingBottom="4dp"
        android:visibility="gone">

        <Space
            android:id="@+id/spacer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btn_cancel"
            style="?android:attr/buttonBarNegativeButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btn_ok"
            style="?android:attr/buttonBarPositiveButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok" />
    </LinearLayout>

</LinearLayout>